--- a/src/components/Navbar/navbar.module.css
+++ b/src/components/Navbar/navbar.module.css
@@ -3,6 +3,7 @@
   justify-content: flex-start;
   align-items: center;
   padding: 20px;
+  pointer-events: all;
 }
 
 .containerLeft, .containerRight {
@@ -80,4 +81,21 @@
   background-color: white;
   border-radius: 100%;
   padding: 10px;
+}
+
+.loginEnd {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  background: #E6F9FB;
+  padding: 10px 15px;
+  border-radius: 15px;
+  font-family: Poppins;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 27px;
+  letter-spacing: 0em;
+  text-align: center;
+  position: absolute;
+  right: 30px;
 }/*# sourceMappingURL=navbar.module.css.map */
